Fixed the Overflow

--- a/home/style.css
+++ b/home/style.css
@@ -700,7 +700,7 @@ button {
     margin-top: 3rem;
   }
   .serviceBox {
-    /* margin-top: 4rem; */
+    margin-top: 3rem;
     width: 40rem;
     padding: 2rem;
     background-color: #f9f9f9;
